Доробити витягування протоколів з бази

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=470538066ZxC123
+DB_PASSWORD=470538066
 DB_NAME=db
 PORT=3000
 JWT_SECRET=supersecretkey
