Зроблено додавання і виведення протоколів

--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ DB_NAME=db
 PORT=3000
 JWT_SECRET=supersecretkey
 NODE_ENV=development
+
+; DB_HOST=sql7.freesqldatabase.com
+; DB_USER=sql7804883
+; DB_PASSWORD=DKyE5lYYur
+; DB_NAME=sql7804883
+; DB_PORT=3306
+; PORT=3000
+; JWT_SECRET=supersecretkey
+; NODE_ENV=development
