Зроблено додавання і виведення протоколів

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_NAME=db
 PORT=3000
 JWT_SECRET=supersecretkey
 NODE_ENV=development
+IS_PROD=false
 
 ; DB_HOST=sql7.freesqldatabase.com
 ; DB_USER=sql7804883
