зроблено підсвічування інструкцій з близькими термінами перегляду

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-; DB_HOST=localhost
-; DB_USER=root
-; DB_PASSWORD=470538066
-; DB_NAME=db
-; PORT=3000
-; JWT_SECRET=supersecretkey
-; NODE_ENV=development
-; IS_PROD=false
-
-DB_HOST=sql7.freesqldatabase.com
-DB_USER=sql7809095
-DB_PASSWORD=Dq6pXK2U5l
-DB_NAME=sql7809095
-DB_PORT=3306
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=470538066
+DB_NAME=db
 PORT=3000
 JWT_SECRET=supersecretkey
 NODE_ENV=development
+IS_PROD=false
+
+; DB_HOST=sql7.freesqldatabase.com
+; DB_USER=sql7809095
+; DB_PASSWORD=Dq6pXK2U5l
+; DB_NAME=sql7809095
+; DB_PORT=3306
+; PORT=3000
+; JWT_SECRET=supersecretkey
+; NODE_ENV=development
